# vaba

./: .gitconfig  .gitignore  Dockerfile  LICENSE  README.md  Session.vim  backend.cabal  build-fe.sh  cabal.nix  config  database.sql  elm.json  hie.yaml  shell.nix  test.db  vaba.cabal
app/: Main.hs
elm-src/: app.js  index.html  main.elm
elm-stuff/0.19.1/: Main.elmi  Main.elmo
notes/: one.md
src/: Client.hs  Config.hs  Data.hs  Database.hs  Feed.hs  Frontend.hs  Instances.hs  Main.hs  NoteServer.hs  Repl.hs  Server.hs
src/Api/: Actor.hs  Feed.hs  Inbox.hs  Outbox.hs  PostApi.hs  Server.hs  WebFinger.hs
static/: index.html
