name:                backend
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anton Parkhomenko
maintainer:          mailbox@chuwy.me
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  other-modules:       Data
                     , Config
                     , NoteServer
  -- other-extensions:    
  build-depends:       base >=4.9
                     , base-compat
                     , text
                     , aeson
                     , string-conversions
                     , time
                     , time-compat
                     , directory
                     , bytestring
                     , mtl
                     , attoparsec
                     , http-media
                     , blaze-markup
                     , blaze-html
                     , lucid
                     , dhall
                     , cmark
                     , servant
                     , servant-server
                     , wai 
                     , warp 
  hs-source-dirs:      src
  default-language:    Haskell2010

