name:                vaba
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anton Parkhomenko
maintainer:          mailbox@chuwy.me
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data
                     , Config
                     , Frontend
                     , Client
                     , Database
                     , Repl
                     , Api.Server
                     , Api.Feed
                     , Api.PostApi
                     , Api.Inbox
                     , Api.Outbox
                     , Api.WebFinger
                     , Api.Actor
  build-depends:       base >=4.9
                     , base-compat
                     , text
                     , aeson
                     , string-conversions
                     , time
                     , time-compat
                     , directory
                     , bytestring
                     , mtl
                     , attoparsec
                     , http-media
                     , blaze-markup
                     , blaze-html
                     , lucid
                     , dhall
                     , cmark
                     , servant
                     , servant-server
                     , servant-elm
                     , elm-bridge
                     , warp 
                     , http-conduit
                     , sqlite-simple
                     , aeson

executable vaba
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , warp 
                     , vaba
  -- other-extensions:    
 hs-source-dirs:       app
 default-language:     Haskell2010
